--- a/css/simplebox.css
+++ b/css/simplebox.css
@@ -5,42 +5,49 @@ html, body {
 
 
 h1 {
-  font-size: 20px;
-  font-family: 'Catamaran', Helvetica, sans-serif;
+  font-size: 1.5em;
+  font-family: 'Yantramanav', sans-serif;
+  color: #333;
+  font-weight: 300;
+  letter-spacing: .06em;
+  text-transform: uppercase;
+  line-height: 1.2em;
 
 }
 
 ul li {
   margin: 15px;
-  line-height: 1.5;
-  font-size: 18px;
-  font-family: 'Catamaran', Helvetica, sans-serif;
+  line-height: 1.4;
+  font-size: 16px;
+  font-family: 'Yantramanav', sans-serif;
   font-weight: 200;
   display: list-item;
+  color: #333;
 }
 
 p {
-  font-family: 'Catamaran', Helvetica, sans-serif;
-  font-size: 18px;
+  font-family: 'Yantramanav', sans-serif;
+  font-size: 16px;
+  text-align: left;
+  color: #333;
+  font-weight: 300;
+  line-height: 1.625em;
 
 }
 
 a {
-  font-family: 'Catamaran', Helvetica, sans-serif;
-  font-size: 18px;
+  font-family: 'Yantramanav', sans-serif;
+  font-size: 16px;
   text-decoration: none;
   color: #7D9DBD;
 }
 
 h4 {
   font-size: 14px;
-  font-family: 'Catamaran', Helvetica, sans-serif;
+  font-family: 'Yantramanav', sans-serif;
   font-weight: normal;
 }
 
-.underline_black {
-  border-bottom: 2px solid #232323;
-}
 
 .highlights {
   background-color: #ecf0f1;
@@ -99,24 +106,24 @@ h4 {
 
 .hero_content h1 {
   letter-spacing: 4;
-  font-size: 48px;
-  font-family: 'Catamaran', Helvetica, sans-serif;
+  font-size: 3em;
+  font-family: 'Yantramanav', sans-serif;
   text-align: center;
   color: white;
-  font-weight: 600;
-  margin-bottom: 0px;
+  font-weight: 400;
+  margin-bottom: 10px;
+  letter-spacing: 0.06em;
 }
 
 .hero_content p {
-  letter-spacing: 1;
-  font-size: 22px;
+  letter-spacing: 0.03em;
+  font-size: 20px;
   text-align: center;
   color: white;
-  font-family: 'Catamaran', Helvetica, sans-serif;
-  font-weight:400;
-  line-height: 30px;
+  font-family: 'Yantramanav', sans-serif;
   width: 80%;
   margin: 0 auto;
+  line-height: 30px;
 }
 
 .arrow_back_container {
@@ -212,7 +219,7 @@ h4 {
 .navigation h2 {
   display: inline-block;
   font-size: 14px;
-  font-family: 'Catamaran', Helvetica, sans-serif;
+  font-family: 'Yantramanav', sans-serif;
   cursor: pointer;
   letter-spacing: 1;
   text-align: center;
@@ -320,16 +327,13 @@ h4 {
 }
 
 .solution_container h1 {
-  color: #232323;
   text-align: center;
 }
 
 .solution_container p {
   text-align: center;
-  color: #232323;
   width: 60%;
   margin: 0 auto;
-  font-family: 'Catamaran', Helvetica, sans-serif;
 }
 
 @media screen and (max-width: 640px) {
@@ -379,8 +383,6 @@ h4 {
 }
 
 .user_flow_container {
-  font-size: 26px;
-  font-family: 'Catamaran', Helvetica, sans-serif;
   width: 60%;
   margin: 0 auto;
 }
@@ -455,6 +457,7 @@ h4 {
 
 .branding p {
   text-align: left;
+  margin-bottom: 40px;
 }
 
 .branding img {
@@ -505,8 +508,7 @@ h4 {
 }
 
 .user_testing a {
-  font-size: 18px;
-  font-family: 'Catamaran', Helvetica, sans-serif;
+  font-size: 16px;
   text-align: left;
   text-decoration: none;
   color: #7D9DBD
@@ -567,8 +569,7 @@ h4 {
 }
 
 .high_fidelity a {
-  font-size: 18px;
-  font-family: 'Catamaran', Helvetica, sans-serif;
+  font-size: 16px;
   text-align: left;
   text-decoration: none;
   color: #7D9DBD;
@@ -618,14 +619,11 @@ h4 {
 }
 
 .html h1 {
-  font-family: 'Catamaran', Helvetica, sans-serif;
   text-align: left;
   text-transform: uppercase;
 }
 
 .html a {
-  font-size: 18px;
-  font-family: 'Catamaran', Helvetica, sans-serif;
   text-align: left;
   color: #7D9DBD;
   text-decoration: none;
