--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,10 @@ a {
 
 @media (min-width: 1441px) {
   .about_container {
-    max-width: 1000px;
+    max-width: 936px;
+  }
+  .project_container, .hero_container {
+    max-width: 1008px;
   }
 }
 
