--- a/css/gym.css
+++ b/css/gym.css
@@ -41,6 +41,17 @@ h4 {
   font-weight: normal;
 }
 
+h5 {
+  font-size: 0.9em;
+  font-family: 'Yantramanav', sans-serif;
+  color: #333;
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 1.2em;
+  margin-bottom: -10px;
+
+}
+
 
 ul li {
   margin: 15px;
