--- a/css/ridestarter.css
+++ b/css/ridestarter.css
@@ -42,6 +42,16 @@ h4 {
   font-weight: normal;
 }
 
+h5 {
+  font-size: 0.9em;
+  font-family: 'Yantramanav', sans-serif;
+  color: #333;
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 1.2em;
+  margin-bottom: -10px;
+}
+
 ul li {
   margin: 15px;
   line-height: 1.4;
