--- a/css/equipax.css
+++ b/css/equipax.css
@@ -77,7 +77,7 @@ img:hover {
 /** HERO **/
 
 .hero_equipax {
-  background-image: url("../images/equipaxbig.png");
+  background-image: url("../images/equipaxbig.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
