--- a/css/homepage.css
+++ b/css/homepage.css
@@ -51,7 +51,7 @@ html, body {
 
 .container {
   margin: 0 auto;
-  max-width: 58%;
+  width: 58%;
   text-align: center;
 }
 
@@ -108,7 +108,7 @@ p {
 
 .container2 {
   float: left;
-  max-width: 50%
+  width: 50%
 }
 
 .container2 img {
@@ -120,7 +120,7 @@ p {
 .container3 {
   margin: 0 auto;
   text-align: center;
-  max-width: 70%;
+  width: 70%;
   padding-top: 40px;
   padding-bottom: 20px;
 }
@@ -184,7 +184,7 @@ p {
 
 
 .about_container {
-  max-width: 75%;
+  width: 75%;
   padding-top: 5%;
   margin: 0 auto;
   padding-bottom: 50%;
@@ -263,6 +263,11 @@ a:hover {
   }
   .about_content {
     width: 100%;
+    margin-top: 40px;
+    margin-bottom: 40px;
     text-align: center;
+  }
+  .about_container {
+    width: 90%;
   }
 {
