--- a/css/equipax.css
+++ b/css/equipax.css
@@ -28,7 +28,7 @@ h1 {
   font size: 1.8rem;
   font-family: "oswald";
   font-weight: 600;
-  letter-spacing: 0.05rem;
+  letter-spacing: 0.04rem;
   text-transform: uppercase;
 }
 
@@ -41,14 +41,16 @@ h2 {
 
 h3 {
   font-size: 1.3rem;
-  font-family: "Raleway";
+  font-family: "oswald";
   margin: 40px;
 }
 
 h4 {
-  font-size: 1.2rem;
-  font-family: "Raleway";
-  font-weight: 400;
+  font-size: 1.3rem;
+  font-family: "oswald";
+  font-weight: lighter;
+  margin-top: 80px;
+
 }
 
 li {
@@ -208,6 +210,8 @@ img:hover {
   color: #333;
   cursor: pointer;
 }
+
+.btn:focus {outline:0;}
 
 /** HERO **/
 
