--- a/css/equipax.css
+++ b/css/equipax.css
@@ -7,7 +7,10 @@ body {
   color: #31343C;
   -webkit-font-smoothing: antialiased;
   line-height: 1.6;
-  font-family: 'Yantramanav', sans-serif;
+  letter-spacing: 0.03em;
+  font-size: $base-font-size;
+  line-height: $base-line-height;
+  font-family: 'Raleway';
 }
 
 p {
@@ -55,6 +58,7 @@ h4 {
 
 li {
   margin-bottom: 1rem;
+  font-size: 16px;
 }
 
 img {
@@ -66,10 +70,11 @@ img {
 
 img:hover {
   opacity: 0.8;
+  z-index: -111;
 }
 
 .container {
-  width: 55%;
+  max-width: 55%;
   margin: 0 auto;
   margin-bottom: 80px;
 }
@@ -224,6 +229,7 @@ img:hover {
   opacity: 1;
   text-align: center;
   box-shadow: 0px 2px 5px #888888;
+  z-index: 1000;
 }
 
 .navigation h2 {
@@ -362,6 +368,15 @@ blockquote p {
 
 @media screen and (max-width: 900px) {
   .container {
-    width: 90%;
+    max-width: 90%;
+  }
+  .column {
+    width: 100%;
+    margin-left: 0%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
   }
 }
