--- a/css/equipax.css
+++ b/css/equipax.css
@@ -376,7 +376,11 @@ blockquote p {
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .container {
-  }
+@media screen and (min-width: 900px) {
+  h1 { font-size: 2rem;}
+  h2 {font-size: 1rem;}
+  h3 {font-size: 1.5rem;}
+  h4 {font-size: 1.5rem;}
+  p {font-size: 20px; }
+
 }
