--- a/css/homepage.css
+++ b/css/homepage.css
@@ -276,6 +276,9 @@ a:hover {
   }
 }
 
-@media screen and (min-width:900px) {
-
+@media screen and (min-width: 1600px) {
+  h1 {font-size: 3.4rem;}
+  h2 {font-size: 14px;}
+  p {font-size: 20px;}
+  .center p {font-size:1.2rem;}
 }
