--- a/css/homepage.css
+++ b/css/homepage.css
@@ -276,9 +276,10 @@ a:hover {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1680px) {
   h1 {font-size: 3.6rem;}
   h2 {font-size: 14px;}
-  p {font-size: 20px;}
+  p {font-size: 22px;}
   .center p {font-size:1.2rem;}
+  .heading h1 {font-size: 3.6rem;}
 }
