--- a/css/homepage.css
+++ b/css/homepage.css
@@ -277,9 +277,11 @@ a:hover {
 }
 
 @media screen and (min-width: 1680px) {
+  .container {width: 60%;}
+  .container p {font-size: 20px}
   h1 {font-size: 3.6rem;}
   h2 {font-size: 14px;}
-  p {font-size: 22px;}
+  p {font-size: 20px;}
   .center p {font-size:1.2rem;}
   .heading h1 {font-size: 4rem;}
 }
