--- a/css/homepage.css
+++ b/css/homepage.css
@@ -284,4 +284,5 @@ a:hover {
   p {font-size: 20px;}
   .center p {font-size:1.2rem;}
   .heading h1 {font-size: 4rem;}
+  .footer p {font-size: 14px;}
 }
