--- a/css/homepage.css
+++ b/css/homepage.css
@@ -4,7 +4,7 @@ html, body {
   letter-spacing: 0.03em
 }
 
-.img {
+img {
   max-width: 100%;
 }
 
@@ -165,7 +165,7 @@ p {
 
 .full-width-height {
   width: 100%;
-  height: 100%
+  height: 100%;
 }
 
 .overlay {
@@ -198,7 +198,7 @@ p {
 }
 
 .heading h1 {
-  line-height: 80px;
+  line-height: 5rem;
   font-size: 3.2rem;
 }
 
@@ -283,6 +283,6 @@ a:hover {
   h2 {font-size: 14px;}
   p {font-size: 20px;}
   .center p {font-size:1.2rem;}
-  .heading h1 {font-size: 4rem;}
+  .heading h1 {font-size: 4rem; line-height: 7rem;}
   .footer p {font-size: 14px;}
 }
