--- a/css/homepage.css
+++ b/css/homepage.css
@@ -84,6 +84,24 @@ h2 {
   font-weight: 700;
 }
 
+h3 {
+  font-size: 2rem;
+  font-family: 'Oswald', sans-serif;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 0.18rem;
+}
+
+h4 {
+  font-size: 14px;
+  font-family: 'Raleway', sans-serif;
+  color: #A3A3A3;
+  text-transform: uppercase;
+  letter-spacing: 0.22rem;
+  margin-top: -20px;
+  line-height: 20px;
+}
+
 p {
   font-family: 'Raleway', sans-serif;
   font-size: 16px;
@@ -92,9 +110,6 @@ p {
   opacity: 0.8;
 }
 
-.container .beforescroll {
-  font-size: 16px;
-}
 
 .container .scroll {
   color: grey;
@@ -102,7 +117,6 @@ p {
   letter-spacing: 0.1rem;
   font-size: 14px;
 }
-
 
 .projects {
   width: 100%;
@@ -129,8 +143,6 @@ p {
 
 .container p {
   font-size: 18px;
-
-
 }
 
 .footer {
